--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <form action="POST">
-        <input type="text" name="user-name">
+        <label for="user-name">Your name</label>
+        <input type="text" name="user-name" id="user-name">
         <br>
         <button>submit</button>
     </form>
