--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <form action="POST">
         <label for="user-name">Your name</label>
         <input type="text" name="user-name" id="user-name">
-        
+        <label for="useremail">Enter your email address</label>
+        <input type="email" name="user-email" id="useremail">
         <br>
         <button>submit</button>
     </form>
